# Vision

./: README.md  meson.build
inc/: broccoli_detector.hpp  histogram.hpp  motion_server_session.hpp  pipeline.hpp  pipeline_ui.hpp
src/: broccoli_detector.cpp  histogram.cpp  main.cpp  motion_server_session.cpp  pipeline.cpp  pipeline_ui.cpp
